wwr/styles/rafting.css
:root {
    --primary-color: #03045E;
    --secondary-color: #0077B6;
    --accent1-color: #90E0EF;
    --accent2-color: #CAF0F8;

    /* With Transparency */
    --primary-color-transparent: #03045E99;
    --secondary-color-transparent: #0077B699;
    --accent1-color-transparent: #90E0EF99;
    --accent2-color-transparent: #CAF0F899;
}

* {
    font-family: "Winky Sans", sans-serif;
    font-weight: 400;
    font-style: normal;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    color: var(--primary-color);
    font-family: "Bebas Neue", sans-serif;
    font-weight: 400;
    font-style: normal;
}

h1 {
    display: block;
    text-align: center;
    width: 100%;
    background-color: var(--secondary-color-transparent);
    color: var(--accent2-color);
    padding: 10px 0px;
    border-top: solid 3px var(--primary-color-transparent);
    border-bottom: solid 3px var(--primary-color-transparent);
}

header {
    display: grid;
    grid-template-columns: 250px 1fr;
    align-items: center;
}

header img {
    width: 250px;
    height: auto;
}

header nav {
    display: flex;
    justify-content: center;
}

header nav a {
    font-family: "Bebas Neue", sans-serif;
    font-weight: 400;
    font-style: normal;
    color: var(--primary-color);
    text-decoration: none;
    padding: 4px 30px;
    border: solid 1px var(--primary-color);
}

header nav a:hover {
    background-color: var(--accent1-color);
    text-decoration: underline;
}

p {
    color: var(--secondary-color);
}

main article p {
    color: black;
}

.sociallinks a {
    text-decoration: none;
}

.sociallinks img {
    height: 30px;
    width: auto;
}

body {
    max-width: 800px;
    margin-left: auto;
    margin-right: auto;
}

.hero {
    position: relative;
}

.hero h1 {
    position: absolute;
    top: 0px;
}

.hero article {
    position: absolute;
    top: 100px;
    padding: 20px 30px;
    background-color: var(--accent2-color-transparent);
}

.hero img {
    display: block;
    width: 100%;
    height: auto;
}

.hero article img {
    float: right;
    width: 200px;
}

.history {
    display: flex;
    flex-direction: column;
}

.history h2 {
    text-align: center;
}

.history_content {
    display: flex;
    flex-direction: row;
}

.history_content p,
.history_content img {
    padding: 10px 20px;
}

.history_content p {
    flex: 1;
}

.history_content img {
    width: 250px;
    height: auto;
}

.adventure {
    display: flex;
    flex-direction: column;
}

.adventure h2 {
    text-align: center;
}

.adventure_content {
    display: flex;
    justify-content: space-between;
}

.adventure_content figure {
    width: 140px;
    margin: 0;
}

.adventure_content figcaption {
    text-align: center;
}

.adventure_content img {
    width: 140px;
    height: auto;
}

.company {
    display: flex;
    flex-direction: column;
}

.company h2 {
    text-align: center;
}

.company div {
    font-size: 1.3em;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.company iframe {
    border: solid 1px var(--primary-color);
    width: 400px;
    height: 200px;
    border-radius: 15px;
}

.employees {
    display: flex;
    flex-direction: column;
}

.employees h2 {
    text-align: center;
}

.employees div {
    display: flex;
    justify-content: space-between;
}

.employees div figure {
    width: 225px;
    margin: 0;
}

.employees div figcaption {
    text-align: center;
}

.employees div img {
    width: 225px;
    height: auto;
    border-radius: 15px;
}

.contact_form {
    display: flex;
    flex-direction: column;
}

.contact_form h2 {
    text-align: center;
}

.contact_form form {
    width: 400px;
    margin: 0 auto;
}

.contact_form fieldset {
    display: flex;
    border: solid 1px var(--secondary-color);
    border-radius: 15px;
    flex-direction: column;
    justify-content: space-between;
    padding: 8px 20px 20px 20px;
}

.contact_form legend {
    color: var(--primary-color);
    font-size: 1.2em;
    padding: 0 10px;
}

.contact_form label {
    color: var(--primary-color);
}

.contact_form fieldset div {
    display: grid;
    grid-template-columns: 22px 1fr;
}

.contact_form fieldset div input,
.contact_form fieldset div label {
    padding: 4px 8px;
    color: black;
}

.contact_form fieldset button {
    background-color: var(--primary-color);
    color: white;
    font-size: 1.2em;
    padding: 10px 20px;
    border: none;
    border-radius: 15px;
    margin: 10px auto 0 auto;
}

.contact_form fieldset button:hover {
    background-color: var(--secondary-color);
    cursor: pointer;
}

footer {
    display: grid;
    grid-template-columns: 100px auto 100px;
    margin-top: 20px;
    align-items: center;
}

footer>p>a {
    color: var(--primary-color);
    text-decoration: underline;
}

footer>p>a:hover {
    color: var(--secondary-color);
}

footer p {
    grid-column: 2/3;
    text-align: center;
}

footer nav {
    grid-column: 3/4;
}

